--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/utils.css">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="/Vnerds/utils.css">
+    <link rel="stylesheet" href="/Vnerds/style.css">
+    <link rel="stylesheet" href="/Vnerds/mobile.css">
     <title>V Nerds</title>
 </head>
 
@@ -18,8 +18,8 @@
             </a>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/about.html">About</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="/Vnerds/about.html">About</a></li>
+                <li><a href="/Vnerds/contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="nav-right">
@@ -68,7 +68,7 @@
                 <img src="physics vector.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="/phy.html">
+                <a href="/Vnerds/phy.html">
                     <h1>Physics</h1>
                 </a>
 
@@ -81,7 +81,7 @@
                 <img src="chemistry vector.png" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="/chem.html">
+                <a href="/Vnerds/chem.html">
                     <h1>Chemistry</h1>
                 </a>
 
@@ -93,7 +93,7 @@
                 <img src="maths vector.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="/math.html">
+                <a href="/Vnerds/math.html">
                     <h1>Maths</h1>
                 </a>
 
@@ -105,7 +105,7 @@
                 <img src="books vector.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="/books.html">
+                <a href="/Vnerds/books.html">
                     <h1>books</h1>
                 </a>
 
