--- a/about.html
+++ b/about.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/utils.css">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/mobile.css">
-    <link rel="stylesheet" href="/about.css">
+    <link rel="stylesheet" href="/Vnerds/utils.css">
+    <link rel="stylesheet" href="/Vnerds/style.css">
+    <link rel="stylesheet" href="/Vnerds/mobile.css">
+    <link rel="stylesheet" href="/Vnerds/about.css">
     <title>About</title>
 </head>
 
@@ -19,8 +19,8 @@
             </a>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/about.html">About</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="/Vnerds/about.html">About</a></li>
+                <li><a href="/Vnerds/contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="nav-right">
