--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
                 <span><img src="vnerd.jpeg" width="94px" alt="V Nerds.com"></span>
             </a>
             <ul>
-                <li><a href="/">Home</a></li>
+                <li><a href="/Vnerds/index.html">Home</a></li>
                 <li><a href="/Vnerds/about.html">About</a></li>
                 <li><a href="/Vnerds/contact.html">Contact</a></li>
             </ul>
