--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/utils.css">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/contact.css">
-    <link rel="stylesheet" href="/mobile.css">
+    <link rel="stylesheet" href="/Vnerds/utils.css">
+    <link rel="stylesheet" href="/Vnerds/style.css">
+    <link rel="stylesheet" href="/Vnerds/contact.css">
+    <link rel="stylesheet" href="/Vnerds/mobile.css">
     <title>VNerds</title>
 </head>
 <body>
@@ -16,9 +16,9 @@
                 <span><img src="vnerd.jpeg" width="94px" alt=""></span>
             </a>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about.html">About</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="/Vnerds/indec.html">Home</a></li>
+                <li><a href="/Vnerds/about.html">About</a></li>
+                <li><a href="/Vnerds/contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="nav-right">
