--- a/math.html
+++ b/math.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/utils.css">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/mobile.css">
+    <link rel="stylesheet" href="/Vnerds/utils.css">
+    <link rel="stylesheet" href="/Vnerds/style.css">
+    <link rel="stylesheet" href="/Vnerds/mobile.css">
     <title>Maths</title>
 </head>
 
@@ -17,9 +17,9 @@
                 <span><img src="vnerd.jpeg" width="94px" alt="V Nerds.com"></span>
             </a>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about.html">About</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="/Vnerds/index.html">Home</a></li>
+                <li><a href="/Vnerds/about.html">About</a></li>
+                <li><a href="/Vnerds/contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="nav-right">
