--- a/chem.html
+++ b/chem.html
@@ -43,7 +43,7 @@
            
         </div>
         <div class="content-right">
-            <img src="/Vnerds/chemistry vector.png" alt="V Nerds.com">
+            <img src="chemistry vector.png" alt="V Nerds.com">
         </div>
     </div>
 
