--- a/math.html
+++ b/math.html
@@ -41,7 +41,7 @@
            
         </div>
         <div class="content-right">
-            <img src="/maths vector.jpg" alt="V Nerds.com">
+            <img src="maths vector.jpg" alt="V Nerds.com">
         </div>
     </div>
 
