--- a/chem.html
+++ b/chem.html
@@ -65,7 +65,7 @@
         </div> -->
         <div class="home-article">
             <div class="home-article-img">
-                <img src="/handwritten notes vector.jpg" alt="article">
+                <img src="handwritten notes vector.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
                 <a href="">
@@ -79,7 +79,7 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="/short notes vector.jpg" alt="article">
+                <img src="short notes vector.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
                 <a href="https://drive.google.com/file/d/1g6y40EFZ9jf4saplaLyBhLqHyZKQl1aC/view?usp=sharing" target="_blank">
@@ -91,7 +91,7 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="/dpp vector.jpg" alt="article">
+                <img src="dpp vector.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
                 <a href="">
