--- a/math.html
+++ b/math.html
@@ -63,7 +63,7 @@
         </div> -->
         <div class="home-article">
             <div class="home-article-img">
-                <img src="/handwritten notes vector.jpg" alt="article">
+                <img src="handwritten notes vector.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
                 <a href="">
@@ -77,7 +77,7 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="/short notes vector.jpg" alt="article">
+                <img src="short notes vector.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
                 <a href="https://drive.google.com/file/d/1_2NvNdtXzAQKkW0OlpBjr1BxofA-Tb2B/view?usp=sharing" target="_blank">
@@ -89,7 +89,7 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="/dpp vector.jpg" alt="article">
+                <img src="dpp vector.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
                 <a href="">
