--- a/phy.html
+++ b/phy.html
@@ -50,7 +50,7 @@
            
         </div>
         <div class="content-right">
-            <img src="/physics vector.jpg" alt="V Nerds.com">
+            <img src="physics vector.jpg" alt="V Nerds.com">
         </div>
     </div>
 
@@ -72,7 +72,7 @@
         </div> -->
         <div class="home-article">
             <div class="home-article-img">
-                <img src="/handwritten notes vector.jpg" alt="article">
+                <img src="handwritten notes vector.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
                 <a href="">
@@ -86,7 +86,7 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="/short notes vector.jpg" alt="article">
+                <img src="short notes vector.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
                 <a href="https://drive.google.com/file/d/139zj2l7dyORBzjSnqCqfL7sgtC3hPEmK/view?usp=sharing" target="_blank">
@@ -98,7 +98,7 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="/dpp vector.jpg" alt="article">
+                <img src="dpp vector.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
                 <a href="">
