--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
                 <span><img src="vnerd.jpeg" width="94px" alt=""></span>
             </a>
             <ul>
-                <li><a href="/Vnerds/indec.html">Home</a></li>
+                <li><a href="/Vnerds/index.html">Home</a></li>
                 <li><a href="/Vnerds/about.html">About</a></li>
                 <li><a href="/Vnerds/contact.html">Contact</a></li>
             </ul>
