--- a/books.html
+++ b/books.html
@@ -100,11 +100,11 @@
         
          <div class="home-article">
             <div class="home-article-img">
-                <img src="a-brief-history-of-time.jpg" alt="vnerds">
+                <img src="the name of the wind.jpg" alt="vnerds">
             </div>
             <div class="home-article-content font1">
-                <a href="https://drive.google.com/file/d/1lTz6t4Q6YdwTCfMNK2Y3UQ5hE4d__MtG/view?usp=sharing" target="_blank">
-                    <h1>A Brief History of Time</h1>
+                <a href="https://drive.google.com/file/d/1AEku1NRImnupnccI0k_4VwUSEPFOTQmd/view?usp=sharing" target="_blank">
+                    <h1>The Name of the Wind</h1>
                 </a>
                 </div>
             
